syntax = "proto3";

package kritor.event;

option csharp_namespace = "Kritor.Event";
option java_multiple_files = true;
option java_package = "io.kritor.event";
option go_package = "grpc/kritor/event";

import "Protos/common/message_data.proto";
import "Protos/event/event_notice.proto";
import "Protos/event/event_request.proto";

service EventService {
  rpc RegisterActiveListener(RequestPushEvent) returns (stream EventStructure); // 主动RPC推送器
  rpc RegisterPassiveListener(stream EventStructure) returns (RequestPushEvent); // 被动RPC监听器
}

enum EventType {
  EVENT_TYPE_CORE_EVENT = 0;
  EVENT_TYPE_MESSAGE = 1;
  EVENT_TYPE_NOTICE = 2;
  EVENT_TYPE_REQUEST = 3;
}

message RequestPushEvent {
  EventType type = 1;
}

message EventStructure {
  EventType type = 1;
  oneof event {
    kritor.common.PushMessageBody message = 2;
    RequestsEvent request = 3;
    NoticeEvent notice = 4;
  }
}